# EasyPointPillars

./: .gitignore  README.md  requirements.txt
cpp/: CMakeLists.txt  bootstrap-multihead.yaml  bootstrap-singlehead.yaml
cpp/inference/src/: inference.cc  inference_singlehead.cc
cpp/pointpillars/: pointpillars.cc  pointpillars_singlehead.cc  pointpillars_singlehead.h  postprocess_singlehead.cu  postprocess_singlehead.h
cpp/test-data/: filtered_nusense.py
pcdet/utils/: box_coder_utils.py
ros/src/autoware_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros/src/autoware_msgs/msg/: VehicleStatus.msg
ros/src/lidar_point_pillars/: CMakeLists.txt  package.xml
ros/src/lidar_point_pillars/launch/: lidar_point_pillars.launch
tools/: convert_pp_onnx.py  demo.py  test_onnx_export.py  trans_backbone_multihead.py  trans_backbone_singlehead.py  trans_pfe.py  trans_pfe_multihead.py
tools/onnx_utils/: onnx_single_head.py
tools/visual_tools/: __init__.py  calib.py  draw_3d_onimg.py
